[package]
name = "chronicle"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.40"
env_logger = "0.7.1"
futures = "0.3"
tokio = { version = "1.0", features = ["time", "signal"] }
log = "*"
anymap = "0.12.1"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "time", "signal"] }

env_logger = "0.7.1"
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla-cql" }
derive_builder = "0.9.0"